--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -154,6 +154,7 @@
        <div class="container">
           {% block footer %}
              <small><strong>{{ gl_appname }}</strong><span class="text-muted"><span class="hidden-xs"> - {{ gl_appdesc }}</span><div class="pull-right"><a href="https://github.com/easanles/atletismo-edu">GitHub</a> | {{ gl_author }} - &copy;{{ gl_year }}</div></span></small>
+             <p class="text-muted"><small>Utiliza <a href="http://glyphicons.com">Glyphicons</a> con licencia <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a></small></p>
           {% endblock %}
        </div>
     </footer>
