--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
@@ -1,6 +1,6 @@
          <div class="row">
             <form id="cfg-form" class="form-horizontal" action="{{ path("configuracion_cambiar_ajustes") }}" method="post">
-               <div class="form-group{% if okNombreApp is defined %} has-success has-feedback{% endif %}">
+               {#<div class="form-group{% if okNombreApp is defined %} has-success has-feedback{% endif %}">
                   <label for="cfg_nombreapp" class="col-xs-12 col-sm-4 control-label">Nombre de la aplicación</label>
                   <div class="col-xs-12 col-sm-6">
                      <input type="text" class="form-control" id="cfg_nombreapp" name="nombreapp" value="{{ nombreApp }}"></input>
@@ -9,7 +9,7 @@
                         <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
                      {% endif %}
                   </div>
-               </div>
+               </div>#}
                <div class="form-group{% if errFIniTemp is defined %} has-error has-feedback{% endif %}{% if okFIniTemp is defined %} has-success has-feedback{% endif %}">
                   <label for="cfg_fIniTemp" class="col-xs-12 col-sm-4 control-label">Día y mes de inicio de las temporadas</label>
                   <div class="col-xs-12 col-sm-6">
