Alta y baja de atletas

--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
@@ -72,7 +72,7 @@
 {{ form_start(form) }}
     {{ form_errors(form) }}
 
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-12 col-sm-6">
           {{ form_row(form.apellidos) }}
        </div>
@@ -91,7 +91,7 @@
           {% endif %}
        </div>
     </div>
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-6 col-sm-3">
           {% if warnAtDni is defined %}
              <div class="form-group has-warning has-feedback">
@@ -113,7 +113,7 @@
           {{ form_row(form.tipo) }}
        </div>
     </div>
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-9">
           {{ form_row(form.direccion) }}
        </div>
@@ -121,7 +121,7 @@
           {{ form_row(form.cp) }}
        </div>
     </div>
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-6 col-sm-4">
           {{ form_row(form.localidad) }}
        </div>
@@ -135,7 +135,7 @@
           {{ form_row(form.nacion) }}
        </div>
     </div>
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-6 col-sm-3">
           {{ form_row(form.lfga) }}
        </div>
@@ -154,7 +154,7 @@
           {{ form_row(form.url2) }}
        </div>
     </div>
-    <div class=row">
+    <div class="row">
        <div class="form_row col-xs-12 col-sm-6">
           {{ form_errors(form.fotoFile) }}
           {{ form_widget(form.fotoFile) }}
