--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
@@ -29,8 +29,13 @@
 
 {% block breadcrumb %}
   <li><a href="{{ path('homepage_admin') }}">Portada Admin</a></li>
-  <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
-  <li class="active">{% if atl.nick is not null %}{{ atl.nick }}{% else %}{{atl.apellidos}}, {{atl.nombre}}{% endif %}</li>
+  {% if atl.esAlta == true %}
+     <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
+  {% else %}
+     <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
+     <li><a href="{{ path('listado_atletas_bajas') }}">Atletas de baja</a></li>
+  {% endif %}
+  <li class="active">{% if atl.nick is not null %}{{ atl.nick }}{% else %}{{ atl.apellidos }}, {{ atl.nombre }}{% endif %}</li>
 {% endblock %}
 
    {% block modallabel %}Confirmar borrado{% endblock %}
