--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'EasanlesAtletismoBundle:Default:index.html.twig' %}
 
-{% block title %}Lista de atletas{% endblock %}
+{% block title %}{% if estadoAlta == true %}Listado de atletas{% else %}Listado de atletas de baja{% endif %}{% endblock %}
 
 {% block navbar %}
       {% if app.user.idAtl is not null %}<li><a href="{{ path('mis_competiciones') }}">Mis competiciones</a></li>{% endif %}
@@ -29,32 +29,39 @@
 
 {% block breadcrumb %}
   <li><a href="{{ path('homepage_admin') }}">Portada Admin</a></li>
-  <li class="active">Atletas</li>
+  {% if estadoAlta == true %}
+     <li class="active">Atletas</li>
+  {% else %}
+     <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
+     <li class="active">Atletas de baja</li>
+  {% endif %}
 {% endblock %}
-
-   {% block modallabel %}Confirmar borrado{% endblock %}
-   {% block modalbody %}
-   <p>¿Confirmar borrado del atleta <strong id="data1">***</strong>?</p>
-   <p id="cascade-del-usu-prompt"><input id="cascade-del-usu" type="checkbox" checked><label for="cascade-del-usu" style="font-weight: normal; margin-left: 0.5em"> Borrar también el usuario asociado "<span id="data3"></span>"</span></p>
-   {% endblock %}
-   {% block modalprimary %}<button id="confirmbutton" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</button>{% endblock %}
-
-
+   
+   {% block modallabel %}<div id="dialog-label"></div>{% endblock %}
+   {% block modalbody %}<div id="dialog-body"></div>{% endblock %}
+   {% block modalprimary %}<span id="dialog-btn"></span>{% endblock %}
+   
 {% block container %}   
-   <h1 id="container_title" class="row page-header">Listado de atletas</h1>
+   <h1 id="container_title" class="row page-header">{% if estadoAlta == true %}Listado de atletas{% else %}Listado de atletas de baja{% endif %}</h1>
    <div id="container_header" class="row">
-      <div class="col-xs-8 col-sm-6">
-         <select class="form-control" onChange="goToUrl('{{ path('listado_atletas') }}' + atlSearchParam(this.value, {% if query is defined %}'{{query}}'{% else %}null{% endif %}))">
+      <button class="updater hidden" onClick="location.reload()"></button>
+      <div class="col-xs-6 col-sm-4">
+         <select class="form-control" onChange="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam(this.value, {% if query is defined %}'{{query}}'{% else %}null{% endif %}))">
             <option value="" {% if cat is not defined %}selected{% endif %}>Todas las categorías</option>
             {% for row in vigentes %}
             <option value="{{ row.id }}" {% if cat is defined %}{% if cat == row.id %}selected{% endif %}{% endif %}>{{ row.nombre }}{% if row.edadMax is not null %} ({{ row.edadMax }}){% endif %}</option>
             {% endfor %}
          </select>
       </div>
-      <a class="btn btn-primary" href="{{ path('crear_atleta') }}"><span class="glyphicon glyphicon-plus"></span> Añadir</a>
-      <div class="input-group col-xs-6 col-sm-4 pull-right">
+      {% if estadoAlta == true %}
+         <a class="btn btn-primary" href="{{ path('crear_atleta') }}"><span class="glyphicon glyphicon-plus"></span> Añadir</a>
+         <a class="btn btn-default" href="{{ path('listado_atletas_bajas') }}"><span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span> Ver bajas</a>
+      {% else %}
+         <a class="btn btn-default" href="{{ path('listado_atletas') }}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span> Volver</a>
+      {% endif %}
+      <div class="input-group col-xs-11 col-sm-4 pull-right">
          <input id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %} value="{{query}}"{% endif %} onkeydown="checkEnterKeypress(event)">
-         <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="goToUrl('{{ path('listado_atletas') }}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery()))"><span class="glyphicon glyphicon-search"></span></button></div>
+         <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="goToUrl('{% if estadoAlta == true %}{{ path('listado_atletas') }}{% else %}{{ path('listado_atletas_bajas') }}{% endif %}' + atlSearchParam({% if cat is defined %}{{cat}}{% else %}null{% endif %}, getQuery()))"><span class="glyphicon glyphicon-search"></span></button></div>
       </div>
    </div>
    
@@ -95,12 +102,22 @@
                <ul class="dropdown-menu pull-right">
                   <li><a href="{{ path('historial_atleta', {'id': atl.id}) }}"><span class="glyphicon glyphicon-time"></span> Historial</a></li>
                   <li><a href="{{ path('editar_atleta', {'id': atl.id}) }}"><span class="glyphicon glyphicon-pencil"></span> Editar</a></li>
+                  {% if estadoAlta == true %}
+                     <li><a class="bg-danger" href="#" onClick="showModal('estATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('estado_atleta', {'id': atl.id, 'op': "baja"}) }}', 'baja')"><div class="text-danger"><span class="glyphicon glyphicon-remove-sign"></span> Dar de baja</div></a></li>
+                  {% else %}
+                     <li><a href="#" onClick="showModal('estATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('estado_atleta', {'id': atl.id, 'op': "alta"}) }}', 'alta')"><span class="glyphicon glyphicon-ok-sign"></span> Dar de alta</a></li>
+                  {% endif %}
                   <li><a class="bg-danger" href="#" onClick="showModal('delATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('borrar_atleta', {'i': atl.id}) }}', {% if atl.nombreUsu is not null %}'{{ atl.nombreUsu }}'{% else %}null{% endif %})"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
                </ul>
             </div>
             <div class="hidden-xs">
                <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Historial" href="{{ path('historial_atleta', {'id': atl.id}) }}"><span class="glyphicon glyphicon-time"></span></a>
                <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" href="{{ path('editar_atleta', {'id': atl.id}) }}"><span class="glyphicon glyphicon-pencil"></span></a>
+               {% if estadoAlta == true %}
+                  <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Dar de baja" onClick="showModal('estATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('estado_atleta', {'id': atl.id, 'op': "baja"}) }}', 'baja')"><span class="glyphicon glyphicon-remove-sign"></span></button>
+               {% else %}
+                  <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Dar de alta" onClick="showModal('estATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('estado_atleta', {'id': atl.id, 'op': "alta"}) }}', 'alta')"><span class="glyphicon glyphicon-ok-sign"></span></button>
+               {% endif %}
                <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal('delATL', '{{ atl.apellidos }}, {{ atl.nombre }}', '{{ path('borrar_atleta', {'i': atl.id}) }}', {% if atl.nombreUsu is not null %}'{{ atl.nombreUsu }}'{% else %}null{% endif %})"><span class="glyphicon glyphicon-remove"></span></button>
             </div>
          </td>
