--- a/src/Easanles/AtletismoBundle/Resources/views/Categoria/list_categoria.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Categoria/list_categoria.html.twig
@@ -8,11 +8,16 @@
                      <th><abbr title="Acciones" class="visible-xs-block">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
                   </tr>
                   {% for cat in categorias %}
-                  <tr{% if cat.tFinVal is not null %} class="danger"{% endif %}>
+                  <tr{% if outdated == 'true' and cat.tFinVal is not null and cat.tFinVal < currentTemp %} class="danger"{% endif %}>
                      <td>{{ cat.id }}</td>
                      <td>{{ cat.nombre }}</td>
                      <td>{{ cat.edadMax }}</td>
-                     <td>{{ cat.tIniVal }}/{{ (cat.tIniVal + 1)|slice(2, 2) }}</td>
+                     <td>
+                        {{ cat.tIniVal }}/{{ (cat.tIniVal + 1)|slice(2, 2) }}
+                        {% if outdated != 'true' and cat.tFinVal is not null %}
+                           <span class="label label-danger">Caduca en {{ cat.tFinVal }}</span>
+                        {% endif %}
+                     </td>
                      {% if outdated == 'true' %}
                         {% if cat.tFinVal is null %}<td><em>Vigente</em></td>
                            {% else %}<td class="text-danger">{{ cat.tFinVal }}/{{ (cat.tFinVal + 1)|slice(2, 2) }}</td>
@@ -23,12 +28,20 @@
                            <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal" aria-label="Acciones"></span></button>
                            <ul class="dropdown-menu pull-right">
                               <li><a href="#" onClick="showModal('ediCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-pencil"></span> Editar</a></li>
-                              <li><a class="bg-danger" href="#" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><div class="text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Marcar como caducado</div></a></li>
+                              {% if outdated == 'true' %}
+                                 <li><a href="#" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-remove-circle"></span> Cambiar temporada de fin</a></li>
+                              {% else %}
+                                 <li><a class="bg-danger" href="#" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><div class="text-danger"><span class="glyphicon glyphicon-remove-circle"></span> Marcar como caducado</div></a></li>
+                              {% endif %}
                            </ul>
                         </div>
                         <div class="hidden-xs">
                            <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" onClick="showModal('ediCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-pencil"></span></button>
-                           <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Marcar como caducado" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-remove-circle"></span></button>
+                           {% if cat.tFinVal is not null %}                           
+                              <button type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Cambiar temporada de fin" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-remove-circle"></span></button>
+                           {% else %}
+                              <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Marcar como caducado" onClick="showModal('cadCAT', '{{ cat.nombre }}', {{ cat.id }}, null)"><span class="glyphicon glyphicon-remove-circle"></span></button>
+                           {% endif %}
                         </div>
                      </td>
                   </tr>
